[project]
name = "dbsubs-lat"
version = "0.1.0"
description = "Translate Dragon Ball Recut English ASS subs to Latin-American Spanish"
requires-python = ">=3.11"
dependencies = [
    "pysubs2>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
